--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.20",
+    "@nestjs/websockets": "^10.4.20",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -28,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.5.9",
+    "@types/socket.io": "^3.0.1",
     "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
