--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node ./src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +14,7 @@
     "@types/node": "^24.7.0"
   },
   "dependencies": {
+    "@inquirer/prompts": "^7.8.6",
     "dotenv": "^17.2.3",
     "socket.io-client": "^4.8.1"
   }
