--- a/client/package.json
+++ b/client/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "ts-node ./src/main.ts"
+    "dev": "npx ts-node ./src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^24.7.0"
+    "@types/node": "^24.7.0",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@inquirer/prompts": "^7.8.6",
